--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
 repositories {
+    google()
+    jcenter()
     mavenLocal()
     maven {
         url = 'https://oss.sonatype.org/content/repositories/snapshots'
