--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
+test {
+    // enable TestNG support (default is JUnit)
+    useTestNG()
+}
+
 repositories {
     google()
     jcenter()
