--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.4.31'
     repositories {
         google()
         jcenter()
@@ -10,8 +10,10 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'org.jetbrains.kotlin.jvm'
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm'
+}
 
 test {
     // enable TestNG support (default is JUnit)
@@ -34,10 +36,12 @@ repositories {
 
 dependencies {
     testImplementation 'org.testng:testng:6.8.13'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-testng'
     testImplementation 'org.easymock:easymock:3.3'
     testImplementation 'org.powermock:powermock-module-testng:1.6.0'
     testImplementation 'org.powermock:powermock-api-easymock:1.6.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "com.squareup.okio:okio:2.10.0"
 }
 
 group = 'com.github.pires'
